Improving CommandFactory